# NOWALuaScript

./: .gitignore  CMakeLists.txt  NOWALuaScript.desktop  NOWALuaScript.icns  NOWALuaScript.rc  README.md  appcommunicator.cpp  appcommunicator.h  luascriptadapter.cpp  luascriptadapter.h  luascriptcontroller.cpp  luascriptcontroller.h  luascriptqmladapter.cpp  luascriptqmladapter.h  main.cpp  qml.qrc  resources.qrc
NOWALuaScript/: README.md
backend/: luascript.cpp  luascript.h
model/: apimodel.cpp  apimodel.h  luaeditormodel.cpp  luaeditormodel.h  luaeditormodelitem.cpp  luaeditormodelitem.h  matchclassworker.cpp  matchclassworker.h  matchmethodworker.cpp  matchmethodworker.h  matchvariablesworker.cpp  matchvariablesworker.h
qml/: luaeditorqml.cpp  luaeditorqml.h  luahighlighter.cpp  luahighlighter.h
qml_files/: AboutDialog.qml  DetailsArea.qml  IntelliSenseContextMenu.qml  LuaEditor.qml  Main.qml  MainMenu.qml  SearchDialog.qml
